force-app/main/default/objects/Widget__c/Widget__c.object-meta.xml
<CustomObject>
    <customHelpPage>MyPage</customHelpPage>
    <label>Widget</label>
    <nameField>
        <label>Widget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Widgetsx</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>