force-app/main/default/objects/Widget__c/fields/ObjectA__c.field-meta.xml
<CustomField>
    <fullName>ObjectA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ObjectA</label>
    <referenceTo>ObjectA__c</referenceTo>
    <relationshipLabel>Widgetsx</relationshipLabel>
    <relationshipName>Widgetsx</relationshipName>
    <type>Lookup</type>
</CustomField>