force-app/main/default/objects/Widget__c/fields/PickMe__c.field-meta.xml
<CustomField>
    <fullName>PickMe__c</fullName>
    <label>PickMe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PickMe</valueSetName>
    </valueSet>
</CustomField>