force-app/main/default/objects/Widget__c/fields/SomeFieldOnWidget2__c.field-meta.xml
<CustomField>
    <fullName>SomeFieldOnWidget2__c</fullName>
    <label>Some Field On Widget</label>
    <length>32</length>
    <type>Text</type>
</CustomField>