force-app/main/default/objects/Widget__c/validationRules/On.validationRule-meta.xml
<ValidationRule>
    <fullName>On</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.MySetting__c.On__c</errorConditionFormula>
    <errorMessage>On</errorMessage>
</ValidationRule>